tests/paczka1/small_fuzzy/87113165.err
Error in line 2: 36pzVPf A343 81,4
Error in line 3: UeJySJWoEQ A347 15,1
